# CS-Source-simple-esp

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PROBE_FINDINGS.md  README.md  SPEC.md  _b.bat  _buildlog.txt  _marker.txt  build.bat  dumper.lua  dumper.py
include/Core/: Config.hpp  Memory.hpp
include/Game/: Entity.hpp  Offsets.hpp  Vector.hpp
include/Overlay/: Overlay.hpp
include/Utils/: Math.hpp  anti_recoil.h
src/: main.cpp
src/Core/: Config.cpp  Memory.cpp
src/Game/: Entity.cpp
src/Overlay/: Overlay.cpp
src/Utils/: anti_recoil.cpp
